Issue #2. No more horizontal scrollbars from extra padding

--- a/cas-management-webapp/src/main/webapp/less/layout/content.less
+++ b/cas-management-webapp/src/main/webapp/less/layout/content.less
@@ -35,6 +35,13 @@
         .tr-placeholder {display: table-row; height: 53px; background-color: @color2-lighter;}
     }
 
+    .service-editor > .col-sm-12 {
+        > .col-sm-6 {
+            &:eq(0) {padding-left: 0;}
+            &:eq(1) {padding-right: 0;}
+        }
+    }
+
     .services-summary-table {
         td {
             border-top: none;
